# swift-winui-sample

./: CMakeLists.txt  CMakePresets.json  License.txt  Readme.md
CMake/: Caching.cmake
Dependencies/MddBootstrap/: CMakeLists.txt  MddBootstrap.h  module.modulemap
Dependencies/WinRT/: CMakeLists.txt  projection.json
Dependencies/WinRT/Projection/: CMakeLists.txt  SwiftWinRT.manifest
Dependencies/WinRT/Projection/UWP/ABI/: CMakeLists.txt
Dependencies/WinRT/Projection/UWP/ABI/include/: module.modulemap
Dependencies/WinRT/Projection/UWP/Namespaces/: CMakeLists.txt
Dependencies/WinRT/Projection/UWP/Namespaces/WindowsApplicationModelActivation/: Aliases.swift  CMakeLists.txt
Dependencies/WinRT/Projection/UWP/Namespaces/WindowsApplicationModelDataTransfer/: Aliases.swift  CMakeLists.txt
Dependencies/WinRT/Projection/UWP/Namespaces/WindowsApplicationModelDataTransferDragDrop/: Aliases.swift  CMakeLists.txt
Dependencies/WinRT/Projection/UWP/Namespaces/WindowsDataText/: Aliases.swift  CMakeLists.txt
Dependencies/WinRT/Projection/UWP/Namespaces/WindowsDevicesInput/: Aliases.swift  CMakeLists.txt
Dependencies/WinRT/Projection/UWP/Namespaces/WindowsFoundation/: Aliases.swift  CMakeLists.txt
Dependencies/WinRT/Projection/UWP/Namespaces/WindowsFoundationCollections/: Aliases.swift  CMakeLists.txt
Dependencies/WinRT/Projection/UWP/Namespaces/WindowsFoundationNumerics/: Aliases.swift  CMakeLists.txt
Dependencies/WinRT/Projection/UWP/Namespaces/WindowsGraphics/: Aliases.swift  CMakeLists.txt
Dependencies/WinRT/Projection/UWP/Namespaces/WindowsGraphicsDirectX/: Aliases.swift  CMakeLists.txt
Dependencies/WinRT/Projection/UWP/Namespaces/WindowsGraphicsDirectXDirect3D11/: Aliases.swift  CMakeLists.txt
Dependencies/WinRT/Projection/UWP/Namespaces/WindowsGraphicsEffects/: Aliases.swift  CMakeLists.txt
Dependencies/WinRT/Projection/UWP/Namespaces/WindowsGraphicsImaging/: Aliases.swift  CMakeLists.txt
Dependencies/WinRT/Projection/UWP/Namespaces/WindowsSecurityEnterpriseData/: Aliases.swift  CMakeLists.txt
Dependencies/WinRT/Projection/UWP/Namespaces/WindowsStorage/: Aliases.swift  CMakeLists.txt
Dependencies/WinRT/Projection/UWP/Namespaces/WindowsStorageFileProperties/: Aliases.swift  CMakeLists.txt
Dependencies/WinRT/Projection/UWP/Namespaces/WindowsStorageSearch/: Aliases.swift  CMakeLists.txt
Dependencies/WinRT/Projection/UWP/Namespaces/WindowsStorageStreams/: Aliases.swift  CMakeLists.txt
Dependencies/WinRT/Projection/UWP/Namespaces/WindowsSystem/: Aliases.swift  CMakeLists.txt
Dependencies/WinRT/Projection/UWP/Namespaces/WindowsUI/: Aliases.swift  CMakeLists.txt
Dependencies/WinRT/Projection/UWP/Namespaces/WindowsUIComposition/: Aliases.swift  CMakeLists.txt
Dependencies/WinRT/Projection/UWP/Namespaces/WindowsUICore/: Aliases.swift  CMakeLists.txt
Dependencies/WinRT/Projection/UWP/Namespaces/WindowsUIInput/: Aliases.swift  CMakeLists.txt
Dependencies/WinRT/Projection/UWP/Namespaces/WindowsUINotifications/: Aliases.swift  CMakeLists.txt
Dependencies/WinRT/Projection/UWP/Namespaces/WindowsUIText/: Aliases.swift  CMakeLists.txt
Dependencies/WinRT/Projection/UWP/Namespaces/WindowsUIViewManagement/: Aliases.swift  CMakeLists.txt
Dependencies/WinRT/Projection/UWP/Namespaces/WindowsUIXamlInterop/: Aliases.swift  CMakeLists.txt
Dependencies/WinRT/Projection/UWP/Projection/: CMakeLists.txt  COMInterop+Extensions.swift
Dependencies/WinRT/Projection/UWP/Projection/WindowsApplicationModelActivation/: WindowsApplicationModelActivation_ActivationKind.swift  WindowsApplicationModelActivation_ApplicationExecutionState.swift  WindowsApplicationModelActivation_IActivatedEventArgs.swift  WindowsApplicationModelActivation_IActivatedEventArgsWithUser.swift  WindowsApplicationModelActivation_IApplicationViewActivatedEventArgs.swift  WindowsApplicationModelActivation_ILaunchActivatedEventArgs.swift  WindowsApplicationModelActivation_ILaunchActivatedEventArgs2.swift  WindowsApplicationModelActivation_IPrelaunchActivatedEventArgs.swift  WindowsApplicationModelActivation_IViewSwitcherProvider.swift  WindowsApplicationModelActivation_LaunchActivatedEventArgs.swift  WindowsApplicationModelActivation_SplashScreen.swift  WindowsApplicationModelActivation_TileActivatedInfo.swift
Dependencies/WinRT/Projection/UWP/Projection/WindowsApplicationModelDataTransfer/: WindowsApplicationModelDataTransfer_DataPackage.swift  WindowsApplicationModelDataTransfer_DataPackageOperation.swift  WindowsApplicationModelDataTransfer_DataPackagePropertySet.swift  WindowsApplicationModelDataTransfer_DataPackagePropertySetView.swift  WindowsApplicationModelDataTransfer_DataPackageView.swift  WindowsApplicationModelDataTransfer_DataProviderDeferral.swift  WindowsApplicationModelDataTransfer_DataProviderHandler.swift  WindowsApplicationModelDataTransfer_DataProviderRequest.swift  WindowsApplicationModelDataTransfer_OperationCompletedEventArgs.swift  WindowsApplicationModelDataTransfer_ShareCompletedEventArgs.swift  WindowsApplicationModelDataTransfer_ShareProvider.swift  WindowsApplicationModelDataTransfer_ShareProviderHandler.swift  WindowsApplicationModelDataTransfer_ShareProviderOperation.swift  WindowsApplicationModelDataTransfer_ShareTargetInfo.swift
Dependencies/WinRT/Projection/UWP/Projection/WindowsApplicationModelDataTransferDragDrop/: WindowsApplicationModelDataTransferDragDrop_DragDropModifiers.swift
Dependencies/WinRT/Projection/WinUI/ABI/: CMakeLists.txt
Dependencies/WinRT/Projection/WinUI/Namespaces/: CMakeLists.txt
Dependencies/WinRT/Projection/WinUI/Projection/: CMakeLists.txt  COMInterop+Extensions.swift
Dependencies/WinRT/Projection/WindowsAppSDK/: CMakeLists.txt
Dependencies/WinRT/Projection/WindowsAppSDK/ABI/: CMakeLists.txt
Dependencies/WinRT/Projection/WindowsAppSDK/Namespaces/: CMakeLists.txt
Dependencies/WinRT/Projection/WindowsAppSDK/Projection/: CMakeLists.txt  COMInterop+Extensions.swift
Dependencies/WinRT/Support/: Package.swift
Sources/: CMakeLists.txt  SampleApplication.swift  SwiftApplication.swift  main.swift
(+1601 files in other folders)
