add_subdirectory(WindowsApplicationModelActivation)
add_subdirectory(WindowsApplicationModelDataTransfer)
add_subdirectory(WindowsApplicationModelDataTransferDragDrop)
add_subdirectory(WindowsDataText)
add_subdirectory(WindowsDevicesInput)
add_subdirectory(WindowsFoundation)
add_subdirectory(WindowsFoundationCollections)
add_subdirectory(WindowsFoundationNumerics)
add_subdirectory(WindowsGraphics)
add_subdirectory(WindowsGraphicsDirectX)
add_subdirectory(WindowsGraphicsDirectXDirect3D11)
add_subdirectory(WindowsGraphicsEffects)
add_subdirectory(WindowsGraphicsImaging)
add_subdirectory(WindowsSecurityEnterpriseData)
add_subdirectory(WindowsStorage)
add_subdirectory(WindowsStorageFileProperties)
add_subdirectory(WindowsStorageSearch)
add_subdirectory(WindowsStorageStreams)
add_subdirectory(WindowsSystem)
add_subdirectory(WindowsUI)
add_subdirectory(WindowsUIComposition)
add_subdirectory(WindowsUICore)
add_subdirectory(WindowsUIInput)
add_subdirectory(WindowsUINotifications)
add_subdirectory(WindowsUIText)
add_subdirectory(WindowsUIViewManagement)
add_subdirectory(WindowsUIXamlInterop)