add_subdirectory(MicrosoftUIXaml)
add_subdirectory(MicrosoftUIXamlAutomation)
add_subdirectory(MicrosoftUIXamlAutomationPeers)
add_subdirectory(MicrosoftUIXamlAutomationProvider)
add_subdirectory(MicrosoftUIXamlControls)
add_subdirectory(MicrosoftUIXamlControlsPrimitives)
add_subdirectory(MicrosoftUIXamlData)
add_subdirectory(MicrosoftUIXamlDocuments)
add_subdirectory(MicrosoftUIXamlInput)
add_subdirectory(MicrosoftUIXamlMarkup)
add_subdirectory(MicrosoftUIXamlMedia)
add_subdirectory(MicrosoftUIXamlMediaAnimation)
add_subdirectory(MicrosoftUIXamlMediaImaging)
add_subdirectory(MicrosoftUIXamlMediaMedia3D)
add_subdirectory(MicrosoftUIXamlXamlTypeInfo)